adding text to the about me page

--- a/nickdima/templates/home/about.html
+++ b/nickdima/templates/home/about.html
@@ -81,9 +81,9 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>Salsa Dancer</strong> - no special actions required, all sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site, it will adapt automagically. <a href="https://mobirise.com/">Here's a dance my partner and I choreog</a></li>
-                    <li><strong>Machine Learning Enthusiast</strong>&nbsp;- cut down the development time with drag-and-drop website builder. Drop the blocks into the page, edit content inline and publish - no technical skills required. <a href="https://mobirise.com/">Try it now!</a></li>
-                    <li><strong>Video Game Designer</strong> - choose from the large selection of latest pre-made blocks - full-screen intro, bootstrap carousel, content slider, responsive image gallery with lightbox, parallax scrolling, video backgrounds, hamburger menu, sticky header and more. <a href="https://mobirise.com/">Try it now!</a></li>
+                    <li><strong>Salsa Dancer</strong> - I started dancing Salsa (on1/on2), Bachata, and Cha Cha in 2013 during my 3rd year at UVa and I haven't stopped since! <a href="https://www.youtube.com/watch?v=A6FPyHiPUto" target="_blank">Most recent choreography</a></li>
+                    <li><strong>Machine Learning Enthusiast</strong>&nbsp;- When machine learning produces a solution, often times the 'how it works' is hidden behind layers and layers of neurons. The fact that it works but we often don't know exactly how gives me hope that some of the world's problems that we can't fully understand can be solved with machine learning. <a href="https://www.youtube.com/watch?v=h3l4qz76JhQ" target="_blank">This video was the start of my journey (poetically enough, youtube's machine learning algorithm recommended it to me).</a></li>
+                    <li><strong>Video Game Designer</strong> - From Sim City 2000-Runescape-World of Warcraft-Starcraft 2 I've always had an appreciation for the emmersive experiences video games can offer. I'm more excited than ever now that I have the tools to contribute to this world.<a href="{{url_for('lunchbreak.home')}}}" target="_blank">Check my games out!</a></li>
                 </ol>
             </div>
         </div>
@@ -121,7 +121,7 @@
                     <div class="media-content">
                         <div class="mbr-section-text">
                             <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                               <strong>Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em>mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools available today.
+                               <strong>I got my start with Python in 2014 when studying <em>Quantum Mechanics</em>!</strong> When you're trying to analyize the output of a 5 GHz wave form generator (billions of rows of data), you will quickly reach the limitations of Microsoft Excel. My professor used this limitation as a branching off point to introduce the class into the world of data analysis with Python.
                             </p>
                         </div>
                     </div>
@@ -139,10 +139,10 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-8">
                 <div class="col-12 col-md-6 pr-lg-4 mbr-text mbr-fonts-style display-7">
-                     Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
+                     I continued my journey with computer science post graduation by taking <em>Open Courseware</em> classes like 'Introduction to Computer Science and Programming in Python' @MIT, 'Computer Systems Engineering' @MIT, and 'Introduction to Computer Science I' @Harvard in addition to watching many... many... many Computerphile videos.
                 </div>
                 <div class="col-12 col-md-6 pl-lg-4 mbr-text mbr-fonts-style display-7">
-                     Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
+                     The coding train was my biggest influence... (Add more)
                 </div>
             </div>
         </div>
