added python logo

--- a/nickdima/templates/home/about.html
+++ b/nickdima/templates/home/about.html
@@ -116,7 +116,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 80%;">
-                      <img src="{{url_for('static', filename='main_assets/images/01.jpg')}}" alt="Friends">  
+                      <img src="{{url_for('static', filename='main_assets/images/python_icon.png')}}" alt="Friends">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
