fixed broken url

--- a/nickdima/templates/home/about.html
+++ b/nickdima/templates/home/about.html
@@ -83,7 +83,7 @@
                 <ol>
                     <li><strong>Salsa Dancer</strong> - I started dancing Salsa (on1/on2), Bachata, and Cha Cha in 2013 during my 3rd year at UVa and I haven't stopped since! <a href="https://www.youtube.com/watch?v=A6FPyHiPUto" target="_blank">Most recent choreography</a></li>
                     <li><strong>Machine Learning Enthusiast</strong>&nbsp;- When machine learning produces a solution, often times the 'how it works' is hidden behind layers and layers of neurons. The fact that it works but we often don't know exactly how gives me hope that some of the world's problems that we can't fully understand can be solved with machine learning. <a href="https://www.youtube.com/watch?v=h3l4qz76JhQ" target="_blank">This video was the start of my journey (poetically enough, youtube's machine learning algorithm recommended it to me).</a></li>
-                    <li><strong>Video Game Designer</strong> - From Sim City 2000-Runescape-World of Warcraft-Starcraft 2 I've always had an appreciation for the emmersive experiences video games can offer. I'm more excited than ever now that I have the tools to contribute to this world.<a href="{{url_for('lunchbreak.home')}}}" target="_blank"> Check my games out!</a></li>
+                    <li><strong>Video Game Designer</strong> - From Sim City 2000-Runescape-World of Warcraft-Starcraft 2 I've always had an appreciation for the emmersive experiences video games can offer. I'm more excited than ever now that I have the tools to contribute to this world.<a href="{{url_for('lunchbreak.home')}}" target="_blank"> Check my games out!</a></li>
                 </ol>
             </div>
         </div>
