--- a/nickdima/templates/lunchbreak/lunchbreak.html
+++ b/nickdima/templates/lunchbreak/lunchbreak.html
@@ -9,16 +9,15 @@
   <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
   <title>Lunchbreak</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/web/assets/mobirise-icons/mobirise-icons.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/tether/tether.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/bootstrap/css/bootstrap.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/bootstrap/css/bootstrap-grid.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/bootstrap/css/bootstrap-reboot.min.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/socicon/css/styles.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/dropdown/css/style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/theme/css/style.css')}}">
+  <link rel="stylesheet" href="{{url_for('static', filename='main_assets/mobirise/css/mbr-additional.css')}}" type="text/css">
   
   
 </head>
@@ -102,7 +101,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/01.jpg" alt="Mobirise">
+                        <img src="{{url_for('static', filename='main_assets/images/01.jpg')}}" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -118,7 +117,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/02.jpg" alt="Mobirise">
+                        <img src="{{url_for('static', filename='main_assets/images/02.jpg')}}" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -134,7 +133,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/03.jpg" alt="Mobirise">
+                        <img src="{{url_for('static', filename='main_assets/images/03.jpg')}}" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -150,7 +149,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/04.jpg" alt="Mobirise">
+                        <img src="{{url_for('static', filename='main_assets/images/04.jpg')}}" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -165,7 +164,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/01.jpg" alt="Mobirise">
+                        <img src="{{url_for('static', filename='main_assets/images/01.jpg')}}" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -180,7 +179,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/02.jpg" alt="Mobirise">
+                        <img src="{{url_for('static', filename='main_assets/images/02.jpg')}}" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -223,7 +222,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/01.jpg" alt="Mobirise">
+                        <img src="{{url_for('static', filename='main_assets/images/01.jpg')}}" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -244,7 +243,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/02.jpg" alt="Mobirise">
+                        <img src="{{url_for('static', filename='main_assets/images/02.jpg')}}" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -340,15 +339,15 @@
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/popper/popper.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/theme/js/script.js"></script>
+  <script src="{{url_for('static', filename='main_assets/web/assets/jquery/jquery.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/popper/popper.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/tether/tether.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/bootstrap/js/bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/dropdown/js/script.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/touchswipe/jquery.touch-swipe.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/parallax/jarallax.min.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/smoothscroll/smooth-scroll.js')}}"></script>
+  <script src="{{url_for('static', filename='main_assets/theme/js/script.js')}}"></script>
   
   
 </body>
