added links to games

--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -129,7 +129,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Minesweeper
+                            <a href="{{url_for('lunchbreak.minesweeper')}}">Minesweeper</a>
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Clear all boxes, but don't press on a bomb!
@@ -145,7 +145,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Asteroids
+                            <a href="{{url_for('lunchbreak.asteroids')}}">Asteroids</a>
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Destroy all asteroids and advance levels, but don't get hit by the debris!
@@ -161,7 +161,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Neuro-Evolutionary Flappy Bird
+                            <a href="{{url_for('lunchbreak.neuro_flappybird')}}">Neuro-Evolutionary Flappy Bird</a>
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Watch your computer learn to play flappy bird!
@@ -176,7 +176,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Jungle Run
+                            <a href="{{url_for('lunchbreak.junglerun')}}">Jungle Run</a>
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Collect as many gold coins as you can, try not to fall!
@@ -191,7 +191,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Tetris
+                            <a href="{{url_for('lunchbreak.tetris')}}">Tetris</a>
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Clear as many layers as you can before you get overwhelmed!
@@ -235,7 +235,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
-                            Tower Defense
+                            <a href="{{url_for('lunchbreak.towerdefense')}}">Tower Defense</a>
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Use different weapons to protect your tower from enemy forces!
@@ -257,7 +257,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
-                            Highway Chase
+                            <a href="{{url_for('lunchbreak.highway_chase')}}">Highway Chase</a>
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Advance through levels killing as many enemies as possible!
