--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -197,6 +197,12 @@
                             Clear as many layers as you can before you get overwhelmed!
                         </p>
                     </div>
+                    <!--test button-->
+                    <div class="mbr-section-btn text-center">
+                        <a href="{{url_for('lunchbreak.towerdefense')}}" class="btn btn-primary display-4">
+                            Play Beta
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -242,7 +248,7 @@
                         </p>
                     </div>
                     <div class="mbr-section-btn text-center">
-                        <a href="https://mobirise.com" class="btn btn-primary display-4">
+                        <a href="{{url_for('lunchbreak.towerdefense')}}" class="btn btn-primary display-4">
                             Play Beta
                         </a>
                     </div>
@@ -264,7 +270,7 @@
                         </p>
                     </div>
                     <div class="mbr-section-btn text-center">
-                        <a href="https://mobirise.com" class="btn btn-primary display-4">
+                        <a href="{{url_for('lunchbreak.highway_chase')}}" class="btn btn-primary display-4">
                             Play Beta
                         </a>
                     </div>
