--- a/nickdima/templates/lunchbreak/index.html
+++ b/nickdima/templates/lunchbreak/index.html
@@ -117,6 +117,12 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Eat as much food as you can, but don't hit your tail!
                         </p>
+                        <!--test button-->
+                        <div class="mbr-section-btn text-center">
+                        <a href="{{url_for('lunchbreak.snake')}}" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -134,6 +140,12 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Clear all boxes, but don't press on a bomb!
                         </p>
+                        <!--test button-->
+                        <div class="mbr-section-btn text-center">
+                        <a href="{{url_for('lunchbreak.minesweeper')}}" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -150,6 +162,12 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Destroy all asteroids and advance levels, but don't get hit by the debris!
                         </p>
+                        <!--test button-->
+                        <div class="mbr-section-btn text-center">
+                        <a href="{{url_for('lunchbreak.asteroids')}}" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -166,6 +184,12 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                            Watch your computer learn to play flappy bird!
                         </p>
+                        <!--test button-->
+                        <div class="mbr-section-btn text-center">
+                        <a href="{{url_for('lunchbreak.neuro_flappybird')}}" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -181,6 +205,12 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Collect as many gold coins as you can, try not to fall!
                         </p>
+                        <!--test button-->
+                        <div class="mbr-section-btn text-center">
+                        <a href="{{url_for('lunchbreak.junglerun')}}" class="btn btn-primary display-4">
+                            Play
+                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -198,8 +228,8 @@
                         </p>
                         <!--test button-->
                         <div class="mbr-section-btn text-center">
-                        <a href="{{url_for('lunchbreak.towerdefense')}}" class="btn btn-primary display-4">
-                            Play Beta
+                        <a href="{{url_for('lunchbreak.tetris')}}" class="btn btn-primary display-4">
+                            Play
                         </a>
                         </div>
                     </div>
