added github to main page

--- a/nickdima/templates/home/home2.html
+++ b/nickdima/templates/home/home2.html
@@ -34,7 +34,7 @@
                 
                 <div class="mbr-text align-center mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
-                        <a href="https://www.youtube.com/watch?v=A6FPyHiPUto" target="_blank">Salsa Dancer</a><br><a href="{{url_for('lunchbreak.neuro_flappybird')}}" target="_blank">Machine Learning Enthusiast</a><br><a href="{{url_for('lunchbreak.home')}}" target="_blank">Video Game Designer</a></p>
+                        <a href="https://www.youtube.com/watch?v=A6FPyHiPUto" target="_blank">Salsa Dancer</a><br><a href="{{url_for('lunchbreak.neuro_flappybird')}}" target="_blank">Machine Learning Enthusiast</a><br><a href="{{url_for('lunchbreak.home')}}" target="_blank">Video Game Designer</a><br><a href="https://github.com/ncd2dq" target="_blank">Developer</a></p>
                 </div>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://www.linkedin.com/in/nicholas-dima-975070115/" target="_blank">Professional Life</a>
                     <a class="btn btn-md btn-white-outline display-4" href="{{ url_for('home.about') }}" target="_blank">Personal Life</a></div>
