changed css location

--- a/nickdima/home/static/main_assets/mobirise/css/mbr-additional.css
+++ b/nickdima/home/static/main_assets/mobirise/css/mbr-additional.css
@@ -2475,7 +2475,7 @@ body {
 .cid-r1YRAPhshO {
   padding-top: 120px;
   padding-bottom: 120px;
-  background-image: url("../../../images/aboutme-box-2000x1534.jpg");
+  background-image: url("http://www.nickdima.com/home/static/main_assets/images/aboutme-box-2000x1534.jpg");
 }
 .cid-r1YRAPhshO H2 {
   text-align: center;
