figuring out templating

--- a/nickdima/test_pong/template/index.html
+++ b/nickdima/test_pong/template/index.html
@@ -18,10 +18,10 @@
 		    }
 
 		</script>
-		<script src="{{url_for('static', filename='libraries/p5.min.js')}}"></script>
-		<script src="{{url_for('static', filename='js/paddle.js')}}"></script>
-		<script src="{{url_for('static', filename='js/ball.js')}}"></script>
-		<script src="{{url_for('static', filename='js/sketch.js')}}"></script>
+		<script src="{{url_for('test_pong.static', filename='libraries/p5.min.js')}}"></script>
+		<script src="{{url_for('test_pong.static', filename='js/paddle.js')}}"></script>
+		<script src="{{url_for('test_pong.static', filename='js/ball.js')}}"></script>
+		<script src="{{url_for('test_pong.static', filename='js/sketch.js')}}"></script>
 
 	</head>
 
