--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -5,6 +5,8 @@
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 		
 		<script type="text/javascript" charset="utf-8">
+
+			//Change from the below to io.connect('') for system to work on Heroku with https and http
 		    var socket = io.connect('http://' + document.domain + ':' + location.port);
 
 		    //socket.on('connect', function() {
