--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -7,8 +7,8 @@
 		<script type="text/javascript" charset="utf-8">
 
 			//Change from the below to io.connect('') for system to work on Heroku with https and http
-		    var socket = io.connect('http://' + document.domain + ':' + location.port);
-		    //var socket = io.connect('');
+		    //var socket = io.connect('http://' + document.domain + ':' + location.port);
+		    var socket = io.connect('');
 
 		    //socket.on('connect', function() {
 		    //    socket.emit('my event', {data: 'I\'m connected!'});
