--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -8,7 +8,7 @@
 
 			//Change from the below to io.connect('') for system to work on Heroku with https and http
 		    //var socket = io.connect('http://' + document.domain + ':' + location.port);
-		    var socket = io.connect('');
+		    //var socket = io.connect('');
 
 		    //socket.on('connect', function() {
 		    //    socket.emit('my event', {data: 'I\'m connected!'});
@@ -16,9 +16,9 @@
 
 
 		    //this function is run when button is pressed
-		    function do_increment(){
-		    	socket.emit('increment', {'value': 5})
-		    }
+		    //function do_increment(){
+		    //	socket.emit('increment', {'value': 5})
+		    //}
 
 		</script>
 		<script src="{{url_for('test_pong.static', filename='libraries/p5.min.js')}}"></script>
