added secret games

--- a/nickdima/lunchbreak/template/index.html
+++ b/nickdima/lunchbreak/template/index.html
@@ -250,6 +250,7 @@
                     Games in developement</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
                     Feel free to play and give feedback, but these are still in the works!</h3>
+                    <h5 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><a href="{{ url_for('test_pong.test_pong_game') }}">Secret games</a> </h5>
                 
             </div>
         </div>
