--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -19,7 +19,9 @@
 		    //function do_increment(){
 		    //	socket.emit('increment', {'value': 5})
 		    //}
-
+		    function get_out(){
+		    	location.href=" {{url_for(lunchbreak.home)}} "
+		    }
 		</script>
 		<script src="{{url_for('test_pong.static', filename='libraries/p5.min.js')}}"></script>
 		<script src="{{url_for('test_pong.static', filename='js/paddle.js')}}"></script>
