added quotes on urlfor

--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -20,7 +20,7 @@
 		    //	socket.emit('increment', {'value': 5})
 		    //}
 		    function get_out(){
-		    	location.href=" {{url_for(lunchbreak.home)}} "
+		    	location.href=" {{url_for('lunchbreak.home')}} "
 		    }
 		</script>
 		<script src="{{url_for('test_pong.static', filename='libraries/p5.min.js')}}"></script>
