--- a/nickdima/test_pong/template/indexpong.html
+++ b/nickdima/test_pong/template/indexpong.html
@@ -28,9 +28,24 @@
 		<script src="{{url_for('test_pong.static', filename='js/ball.js')}}"></script>
 		<script src="{{url_for('test_pong.static', filename='js/sketch.js')}}"></script>
 
+		<script> function add_chat(mes){
+			let elm = document.getElementById('chatbox');
+			elm.innerHTML = mes['chat'] + '<br>' + elm.innerHTML;
+		}
+
+		your_sock.on('recv_chat', function(data){
+			add_chat(data);
+		});
+		</script>
+
 	</head>
 
 	<body>
+		<form onsubmit="your_sock.emit('send_chat', {'chat': document.getElementById('chat').value});">
+			<input type="text" name="chat" id='chat'>
+			<input type="submit" value="submit">
+		</form>
+		<p id='chatbox'></p>
 		<!--<button onclick="do_increment()">Increment</button>-->
 	</body>
 </html>
